Added features section and styling

--- a/index.html
+++ b/index.html
@@ -10,5 +10,16 @@
         <p>A simple task management app</p>
         <a href="YOUR_APP_URL" class="button">Try Now</a>
     </header>
+<section class="features">
+    <h2>Key Features</h2>
+    <div class="feature">
+        <h3>Easy Task Creation</h3>
+        <p>Add tasks with one click.</p>
+    </div>
+    <div class="feature">
+        <h3>Priority Sorting</h3>
+        <p>Organize by importance.</p>
+    </div>
+</section>
 </body>
 </html>
